<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.BajajFdMainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <LinearLayout
            android:orientation="horizontal"
            android:background="@color/red"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imgBack"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:padding="10dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/svg_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/back"
                android:gravity="center" />

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:minHeight="?actionBarSize"
                android:padding="@dimen/appbar_padding"
                android:text="@string/fd"
                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_steps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:background="@color/color_EFEFEF"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <ImageView
                android:id="@+id/step1"
                android:layout_width="19dp"
                android:layout_height="19dp"
                android:contentDescription="@string/step1"
                android:gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:text="@string/step1"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <View
                android:layout_width="22dp"
                android:layout_height="2dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:background="@color/color_green" />

            <ImageView
                android:id="@+id/step2"
                android:layout_width="19dp"
                android:layout_height="19dp"
                android:contentDescription="@string/step2"
                android:gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:text="@string/step2"
                android:textColor="@color/black"
                android:textSize="11sp" />

            <View
                android:layout_width="22dp"
                android:layout_height="2dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:background="@color/color_green" />

            <ImageView
                android:id="@+id/step3"
                android:layout_width="19dp"
                android:layout_height="19dp"
                android:contentDescription="@string/step3"
                android:gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:text="@string/step3"
                android:textColor="@color/black"
                android:textSize="11sp" />

            <View
                android:layout_width="22dp"
                android:layout_height="2dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:background="@color/color_green" />

            <ImageView
                android:id="@+id/step4"
                android:layout_width="19dp"
                android:layout_height="19dp"
                android:contentDescription="@string/step4"
                android:gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:text="@string/step4"
                android:textColor="@color/black"
                android:textSize="11sp" />

        </LinearLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:contentDescription="@string/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>